# birdie

./: .gitignore  README.md  WORKING_EXAMPLE.py  api.py  api_tokenizer.py  example.py  loss_fns.py  model.py  pyproject.toml  readme.md  requirements.txt  tokenizer.py  train_wrapper.py  ul2_config.py  utils.py
JAX_adapter_for_EleutherAI/: README.md  api.py  birdie_adapter.py  model.py  server.py
birdie/: all_in_one.py  gated_ssm_agent.py
birdie_rl/: __init__.py  load_objective.py  pipeline_generator.py
birdie_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
birdie_rl/birdie_reward_model/: __init__.py  agent_bird.py  birdie.py  gated_ssm_agent.py  reward_model.py  rotary.py
birdie_rl/example_usage/: base_model.py  benchmark_dataloader.py  birdie_config.py  compress.py  example.py  ul2_config.py  utils.py
birdie_rl/objectives/: autoencoding.py  base.py  copying.py  deshuffling.py  infilling.py  next_token_prediction.py  prefix_language_modeling.py  selective_copying.py  utils.py
birdie_rl/pipeline/: main_controller.py  packer_batcher.py  packer_batcher2.py  test_packer_batcher.py  worker.py
birdie_rl/tests/: run_tests.sh  test_alignment.py  test_autoencoding.py  test_copying.py  test_deshuffling.py  test_infilling.py  test_load_objective.py  test_minimal_trainer_integration.py  test_next_token_prediction.py  test_output.txt  test_packer.py  test_pipeline.py  (+4 more)
configs/: birdie_config.py  next_token_prediction.py  objective_configs.py  ul2.py
layers/: attention.py  easydel_flash.py  embeddings.py  mlp.py  positional_embeddings.py
(+10 files in other folders)
